--- a/teachable-machine-spike/index.html
+++ b/teachable-machine-spike/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        Teachable Machine Experiments
+        <title>Teachable Machine Experiments</title>
     </head>
     <body>
         <h1>Teachable Machine Experiments</h1>
         <h2>Demos</h2>
         <ol>
             <li><a href="./test1.html"> Demo 1: Triggering SPIKE Actions based on Number of Fingers shown</a></li>
+            <li><a href="./test2.html"> Demo 2: Triggering SPIKE Actions using Audio Triggers</a></li>
         </ol>
     </body>
 </html>
