--- a/Joseph-Website/index.html
+++ b/Joseph-Website/index.html
@@ -89,6 +89,9 @@
           </button>
         </div>
         <div id="loading"></div>
+        <br>
+        <p>Input API key below:</p>
+        <input type="text" id="apiKeyInput">
       </div>
       <div class="two-col-page-body-col">
         <div>
